# EP-Metodos-Numericos

./: CMakeLists.txt  README.md
include/: ep_tarefa1.h  ep_tarefa2.h  ep_tarefa3.h  ep_tarefa4.h  ep_tarefa5.h  random.h
resources/: input_gps_0.txt  input_gps_1.txt  input_gps_2.txt  input_gps_3.txt
src/: ep.c  ep_tarefa1.c  ep_tarefa2.c  ep_tarefa3.c  ep_tarefa4.c  ep_tarefa5.c  random.c
tests/: test_ep_tarefa1.c  test_ep_tarefa2.c  test_ep_tarefa3.c  test_ep_tarefa4.c  test_ep_tarefa5.c
